SOURCE/objects/VOB__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_acute_detoxes_covered_under_plan__c</fullName>
        <label>Sub-acute detoxes covered under plan?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subs_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subs_City__c</fullName>
        <label>City1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subs_State__c</fullName>
        <label>Sub State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subs_zip__c</fullName>
        <label>Sub Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB_New__c</fullName>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Last_Name__c</fullName>
        <label>Subscriber Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_And_Date_completed__c</fullName>
        <label>Time And Date completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_entity_is_processing_the_claims__c</fullName>
        <label>What entity is processing the claims?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>behavioral_health_and_subs_abuse_carved__c</fullName>
        <inlineHelpText>Is behavioral health and substance abuse carved out?</inlineHelpText>
        <label>Behavioral health and subs abuse carved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>out_of_state_restrictions_policy__c</fullName>
        <inlineHelpText>Are there any out of state restrictions for this policy?</inlineHelpText>
        <label>Out of state restrictions policy?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>percent_insurance_will_pay_out__c</fullName>
        <label>% insurance will pay out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>VOB</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_VOBS</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Client_First_Name__c</columns>
        <columns>Client_Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>VOB Pending</value>
        </filters>
        <label>All - Pending VOBS</label>
    </listViews>
    <listViews>
        <fullName>All_Requested_VOBS</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>VOB Requested</value>
        </filters>
        <label>All - Requested VOBS</label>
    </listViews>
    <listViews>
        <fullName>VOB_Complete</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>VOB Complete</value>
        </filters>
        <label>VOB Complete</label>
    </listViews>
    <listViews>
        <fullName>VOB_Pending</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>VOB Pending</value>
        </filters>
        <label>VOB Pending</label>
    </listViews>
    <listViews>
        <fullName>VOB_Requested</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>VOB Requested</value>
        </filters>
        <label>VOB Requested</label>
    </listViews>
    <listViews>
        <fullName>Vob_Assignment_VOB</fullName>
        <filterScope>Queue</filterScope>
        <label>VOB Requested Queue</label>
        <queue>Vob_Assignment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VOB-{0000}</displayFormat>
        <label>VOB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assigned_to_when_Stage_Requested</fullName>
        <active>false</active>
        <errorConditionFormula>If(NOT(ISBLANK(Assigned_To__c)),

NOT(ISPICKVAL(Stage__c, &apos;VOB Requested&apos;)),

false)</errorConditionFormula>
        <errorMessage>Vob can be Assigned in VOB Requested Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_and_Assigne</fullName>
        <active>true</active>
        <description>VOB Assigneed to can be filled after VOB Requested Stage</description>
        <errorConditionFormula>AND(ISCHANGED(Stage__c),ISPICKVAL(Stage__c,&apos;VOB Requested&apos;),

NOT(ISBLANK(Assigned_To__c)))</errorConditionFormula>
        <errorMessage>VOB Assigneed to can be filled after VOB Requested Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_and_Assigned_To</fullName>
        <active>true</active>
        <description>VOB can be assigned only in VOB Requested Stage</description>
        <errorConditionFormula>AND(ISPICKVAL(Stage__c, &apos;VOB In Queue&apos;),

NOT(ISBLANK(Assigned_To__c)))</errorConditionFormula>
        <errorMessage>VOB can be assigned only in VOB Requested Stage</errorMessage>
    </validationRules>
</CustomObject>